Added code generator for OpenAPI types
