# server/src/list/model.ts
@@ -1,11 +1,11 @@
-import { Level } from '@prisma/client';
+import { List } from '../generated/openapi';
 import { prisma } from '../prisma';
 
 /**
  * Extracts the list of levels from the latest log record
  * @returns List of levels
  */
-export async function getCurrent(): Promise<Level[]> {
+export async function getCurrent(): Promise<List.GetList.ResponseBody> {
 	const res = await prisma.listLog.findFirst({
 		include: {
 			list: {
